--- a/Anime Website/HTML/SL.html
+++ b/Anime Website/HTML/SL.html
@@ -178,6 +178,93 @@
             </div>
             </div>
             <p class="add">COMPLETE SEASON 2 ADDED</p>
+            <p class="season1">Download Season 1</p>
+            <p class="watch_on">Watch On Crunchyroll & Support Anime in India.</p>
+            <div class="click">
+                <p>how to download movies and series from here?</p>
+                <p class="red">click here</p>
+            </div>
+            <div class="button">
+                <button class="black">Tags</button>
+                <button class="hover">1080p</button>
+                <button class="hover">480p</button>
+                <button class="hover">720p</button>
+                <button class="hover">720p HD</button>
+                <button class="hover">animated series</button>
+                <button class="hover">Anime</button>
+                <button class="hover">Cartoon Shows</button>
+                <button class="hover">Crunchyroll</button>
+                <button class="hover">Dual Audio</button>
+                <button class="hover">Eng Cartoons</button><br>
+                <button class="hover">Eng Sub Anime</button>
+                <button class="hover">Hindi Cartoons</button>
+                <button class="hover">Hindi dubbed</button>
+                <button class="hover">Multi Audio</button>
+                <button class="hover">Tamil Dub</button>
+                <button class="hover">Telugu Dub</button>
+            </div>
+            <div class="like">
+                <button>You may also like</button>
+                <hr>
+            </div>
+            <div class="like_anime">
+                <div class="anime1">
+                    <a href="./DN.html">
+                        <img src="../utils/Death Note(1).jpg" alt="Death Note">
+                    </a>
+                    <a href="./DN.html">
+                        <p>Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
+                    </a>
+                </div>
+                <div class="anime2">
+                    <a href="./Naruto.html">
+                        <img src="../utils/Naruto(1).jpg" alt="Naruto">
+                    </a>
+                    <a href="./Naruto.html">
+                        <p>Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
+                    </a>
+                </div>
+                <div class="anime3">
+                    <a href="./DS.html">
+                        <img src="../utils/Demon Slayer(1).jpg" alt="Demon Slayer">
+                    </a>
+                    <a href="./DS.html">
+                        <p>Demon Slayer Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
+                    </a>
+                </div>
+            </div>
+            <div class="author">
+                <div class="author1">
+                    <button class="btn_author">About the author</button>
+                    <button class="posts">view all posts </button>
+                </div>
+                <hr>
+            </div>
+            <div class="author_info">
+                <img src="../utils/Author Info.jpeg" alt="Author Image">
+                <div class="text">
+                    <h5>Hetuk Patel</h5>
+                    <br>
+                    <p>You must be the change you wish to see in the world.</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="comment1">
+                    <button class="btn_comment">Comments</button>
+                    <div class="flex_comment">
+                        <button><< Previous</button>
+                        <button class="num">1</button>
+                        <p>...</p>
+                        <button class="num">3</button>
+                        <button class="num">4</button>
+                        <p>5</p>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="outline">
+                <input type="text" placeholder="Click here to post comment">
+            </div>
             </div>
             <div class="child4">
                 <input type="text" placeholder="Type Here To Search...">
@@ -199,26 +286,45 @@
                             &amp; 1080p HD WEB-DL | 10bit HEVC ESub
                         </p>
                         <p>
-                            Demon Slayer Season 01[Hindi-Tamil-Telugu-Eng-Jap]
-                            Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
-                            HEVC ESub
+                            <a href="./DS.html">
+                                Demon Slayer Season
+                                01[Hindi-Tamil-Telugu-Eng-Jap]
+                                Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
+                                10bit
+                                HEVC ESub
+                            </a>
                         </p>
                         <p>
-                            Jujutsu Kaisen Season 01
-                            [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
-                            &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            <a href="./JJK.html">
+                                Jujutsu Kaisen Season 01
+                                [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p,
+                                720p
+                                &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            </a>
                         </p>
                         <p>
-                            Naruto Season 01 [Hindi-Tamil-Telugu-Eng-Jap] Multi
-                            Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC
-                            ESub
+                            <a href="./Naruto.html">
+                                Naruto Season 01 [Hindi-Tamil-Telugu-Eng-Jap]
+                                Multi
+                                Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
+                                HEVC
+                                ESub
+                            </a>
                         </p>
                         <p>
-                            Death Note Season 01 [Hindi-Tamil-Telugu-Eng-Jap]
-                            Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
-                            HEVC ESub
+                            <a href="./DN.html">
+                                Death Note Season 01
+                                [Hindi-Tamil-Telugu-Eng-Jap]
+                                Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
+                                10bit
+                                HEVC ESub
+                            </a>
                         </p>
-                        <p>Attack on Titan OAD Episodes Multi Audio</p>
+                        <p>
+                            <a href="./AOT.html">
+                                Attack on Titan OAD Episodes Multi Audio
+                            </a>
+                        </p>
                     </div>
                     <h4>Join Us On Discord</h4>
                     <hr class="hr_3">
