--- a/Anime Website/HTML/index.html
+++ b/Anime Website/HTML/index.html
@@ -52,7 +52,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href>
+                    <a href="./JJK.html">
                         <img src="../utils/Jujutsu Kaisen.jpg"
                             alt="Jujutsu Kaisen"
                             class="image1">
@@ -64,7 +64,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href>
+                    <a href="./DS.html">
                         <img src="../utils/Demon Slayer.jpg" alt="Demon Slayer"
                             class="image1">
                         <div class="text">
@@ -76,7 +76,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href>
+                    <a href="./Naruto.html">
                         <img src="../utils/Naruto.jpg" alt="Naruto"
                             class="image1">
                         <div class="text">
@@ -87,7 +87,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href>
+                    <a href="./DN.html">
                         <img src="../utils/Death Note.jpg" alt="Death Note"
                             class="image1">
                         <div class="text">
@@ -134,7 +134,7 @@
                                 alt="Jujutsu Kaisen" class="latest_img">
                             <div class="description">
                                 <p>
-                                    <a href>
+                                    <a href="JJK.html">
                                         Jujutsu Kaisen
                                         [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi
                                         Audio
@@ -163,7 +163,7 @@
                                 alt="Demon Slayer" class="latest_img">
                             <div class="description">
                                 <p>
-                                    <a href>
+                                    <a href="./DS.html">
                                         Demon
                                         Slayer[Hindi-Tamil-Telugu<br>-Eng-Jap]
                                         Multi Audio 480p, 720p &amp;<br> 1080p
@@ -191,7 +191,7 @@
                                 alt="Death Note" class="latest_img">
                             <div class="description">
                                 <p>
-                                    <a href>
+                                    <a href="./DN.html">
                                         Death Note
                                         [Hindi-Tamil-Telugu<br>-Eng-Jap]
                                         Multi Audio 480p, 720p &amp;<br> 1080p
@@ -219,7 +219,7 @@
                                 class="latest_img">
                             <div class="description">
                                 <p>
-                                    <a href>
+                                    <a href="./Naruto.html">
                                         Naruto Season 01
                                         [Hindi-Tamil-Telugu<br>-Eng-Jap] Multi
                                         Audio
@@ -276,7 +276,7 @@
                             </a>
                         </p>
                         <p>
-                            <a href>
+                            <a href="./DS.html">
                                 Demon Slayer Season
                                 01[Hindi-Tamil-Telugu-Eng-Jap]
                                 Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
@@ -285,7 +285,7 @@
                             </a>
                         </p>
                         <p>
-                            <a href>
+                            <a href="./JJK.html">
                                 Jujutsu Kaisen Season 01
                                 [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p,
                                 720p
@@ -293,7 +293,7 @@
                             </a>
                         </p>
                         <p>
-                            <a href>
+                            <a href="./Naruto.html">
                                 Naruto Season 01 [Hindi-Tamil-Telugu-Eng-Jap]
                                 Multi
                                 Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit
@@ -302,7 +302,7 @@
                             </a>
                         </p>
                         <p>
-                            <a href>
+                            <a href="./DN.html">
                                 Death Note Season 01
                                 [Hindi-Tamil-Telugu-Eng-Jap]
                                 Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
@@ -311,7 +311,7 @@
                             </a>
                         </p>
                         <p>
-                            <a href>
+                            <a href="./AOT.html">
                                 Attack on Titan OAD Episodes Multi Audio
                             </a>
                         </p>
