--- a/Anime Website/HTML/SL.html
+++ b/Anime Website/HTML/SL.html
@@ -8,19 +8,81 @@
     </head>
     <body>
         <header class="title">
-            <h1>HetukAnime4All</h1>
+            <a href="./index.html">
+                <h1>HetukAnime4All</h1>
+            </a>
             <p class="search">🔍</p>
         </header>
         <nav class="navbar">
             <div class="child1">
                 <ul>
-                    <li>Home</li>
-                    <li>Movies<span class="after">▼</span></li>
-                    <li>Cartoon Shows<span class="after">▼</span></li>
-                    <li>Anime<span class="after">▼</span></li>
+                    <a href="./index.html">
+                        <li>Home</li>
+                    </a>
+                    <li>Movies
+                        <svg style="margin-left: 5px; width: 30px; height: 20px;" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M7 10l5 5 5-5z" />
+                        </svg>
+                        <ul class="dropdown">
+                            <li>All Movies List</li>
+                            <li>Animated Series</li>
+                            <li>Hollywood Movies</li>
+                          </ul>
+                    </li>
+                    <li>Cartoon Shows  
+                        <svg style="margin-left: 5px; width: 30px; height: 20px;" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M7 10l5 5 5-5z" />
+                        </svg>
+                        <ul class="dropdown">
+                            <li>List Of Shows</li>
+                            <li>Hindi dub</li>
+                            <li>Eng dub</li>
+                          </ul>
+                    <li>Anime
+                        <svg style="margin-left: 5px; width: 30px; height: 20px;" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M7 10l5 5 5-5z" />
+                        </svg>
+                        <ul class="dropdown">
+                            <li>List Of animes</li>
+                            <li>Hindi dub</li>
+                            <li>Eng dub</li>
+                          </ul>
+                    </li>
                     <li>TV Shows</li>
-                    <li>Channel List<span class="after">▼</span></li>
-                    <li>OTT Networks<span class="after">▼</span></li>
+                    <li>Channel List
+                        <svg style="margin-left: 5px; width: 30px; height: 20px;" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M7 10l5 5 5-5z" />
+                        </svg>
+                        <ul class="dropdown">
+                            <li>CARTOON NETWORK</li>
+                            <li>DISNEY CHANNEL INDIA</li>
+                            <li>HUNGAMA TV</li>
+                            <li>DISNEY XD INDIA</li>
+                            <li>MARVEL HQ</li>
+                            <li>SONY YAY</li>
+                            <li>ETV BAL BHARAT</li>
+                            <li>SONIC NICKELODEAN</li>
+                            <li>NICK INDIA</li>
+                            <li>ZEE CAFE</li>
+                            <li>POGO</li>
+                            <li>NICK HD+</li>
+                            <li>KIDZONE PLUS</li>
+                          </ul>
+                    </li>
+                    <li>OTT Networks
+                        <svg style="margin-left: 5px; width: 30px; height: 20px;" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M7 10l5 5 5-5z" />
+                        </svg>
+                        
+                        <ul class="dropdown">
+                            <li>Netflix</li>
+                            <li>Crunchyroll</li>
+                            <li>Amazon Prime Video</li>
+                            <li>Disney+</li>
+                            <li>Jio Cinema</li>
+                            <li>Zee5</li>
+                          </ul>
+                    </li>
                     <li>First ON Net</li>
                     <li>Exclusive Shows</li>
                     <li>Contact US</li>
@@ -190,7 +252,7 @@
                 <button class="hover">480p</button>
                 <button class="hover">720p</button>
                 <button class="hover">720p HD</button>
-                <button class="hover">animated series</button>
+                <button class="hover">Animated series</button>
                 <button class="hover">Anime</button>
                 <button class="hover">Cartoon Shows</button>
                 <button class="hover">Crunchyroll</button>
